crates/python_parser/tests/snapshots/invalid_syntax@aug_assign_stmt_invalid_value.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/aug_assign_stmt_invalid_value.py
---
## AST

```
Module(
    ModModule {
        range: 0..77,
        body: [
            AugAssign(
                AugAssignStmt {
                    range: 0..13,
                    target: Name(
                        NameExpr {
                            range: 0..1,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        StarredExpr {
                            range: 5..13,
                            value: BoolOp(
                                BoolOpExpr {
                                    range: 6..13,
                                    op: And,
                                    values: [
                                        Name(
                                            NameExpr {
                                                range: 6..7,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            NameExpr {
                                                range: 12..13,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                AugAssignStmt {
                    range: 14..27,
                    target: Name(
                        NameExpr {
                            range: 14..15,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        StarredExpr {
                            range: 19..27,
                            value: Yield(
                                YieldExpr {
                                    range: 20..27,
                                    value: Some(
                                        Name(
                                            NameExpr {
                                                range: 26..27,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                AugAssignStmt {
                    range: 28..46,
                    target: Name(
                        NameExpr {
                            range: 28..29,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        StarredExpr {
                            range: 33..46,
                            value: YieldFrom(
                                YieldFromExpr {
                                    range: 34..46,
                                    value: Name(
                                        NameExpr {
                                            range: 45..46,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                AugAssignStmt {
                    range: 47..64,
                    target: Name(
                        NameExpr {
                            range: 47..48,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        StarredExpr {
                            range: 52..64,
                            value: Lambda(
                                LambdaExpr {
                                    range: 53..64,
                                    parameters: Some(
                                        Parameters {
                                            range: 60..61,
                                            posonlyargs: [],
                                            args: [
                                                ParameterWithDefault {
                                                    range: 60..61,
                                                    parameter: Parameter {
                                                        range: 60..61,
                                                        name: Identifier {
                                                            id: Name("x"),
                                                            range: 60..61,
                                                        },
                                                        annotation: None,
                                                    },
                                                    default: None,
                                                },
                                            ],
                                            vararg: None,
                                            kwonlyargs: [],
                                            kwarg: None,
                                        },
                                    ),
                                    body: Name(
                                        NameExpr {
                                            range: 63..64,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                AugAssignStmt {
                    range: 65..71,
                    target: Name(
                        NameExpr {
                            range: 65..66,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Name(
                        NameExpr {
                            range: 70..71,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 75..76,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 75..76,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x += *a and b
  |       ^^^^^^^ Syntax Error: Boolean expression cannot be used here
2 | x += *yield x
3 | x += *yield from x
  |


  |
1 | x += *a and b
2 | x += *yield x
  |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x += *yield from x
4 | x += *lambda x: x
  |


  |
1 | x += *a and b
2 | x += *yield x
3 | x += *yield from x
  |       ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x += *lambda x: x
5 | x += y := 1
  |


  |
2 | x += *yield x
3 | x += *yield from x
4 | x += *lambda x: x
  |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
5 | x += y := 1
  |


  |
3 | x += *yield from x
4 | x += *lambda x: x
5 | x += y := 1
  |        ^^ Syntax Error: Expected a statement
  |
